# dbus_demo

cpp_server/: CMakeLists.txt  Makefile  README.md  install.sh
cpp_server/config/: config.json  dbus.example.service.conf  dbus.example.service2.conf  dbus_example.service
cpp_server/include/: DbusMethodInstance.hpp  command_line_parser.hpp  dbus_interface.hpp
cpp_server/src/: DbusMethodInstance.cpp  command_line_parser.cpp  dbus_interface.cpp  main.cpp
python_client/: README.md  client.py
